kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ride-share
  labels:
    project: ride-share-platform
    env: dev
